fixed responsiv scrollbars by changing mediaquarrys and deliting overflow: hidden commands. Also fixed edit popup problems with z-index

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,7 +1,3 @@
-body {
-        overflow-x: hidden;
-    }
-
 .contacts {
     position: fixed;
     width: 456px;
