--- a/styles/popup-contact.css
+++ b/styles/popup-contact.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: center;
     transition: 1000ms;
+    z-index: 9999;
 }
 
 .popup-background {
